fix: fix multipart error on login
